--- a/src/components/style/game.scss
+++ b/src/components/style/game.scss
@@ -10,9 +10,18 @@ $outer-color: #222d38;
 
 body {
     background: $outer-color;
-    display: grid;
-    justify-content: center;
     color: #dfdddd;
+}
+
+main {
+    // border: 1px solid #fff;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    align-items: center;
+    column-gap: 3.5rem;
+    row-gap: 3rem;
+    margin: 3rem auto 0 auto;
+    width: fit-content;
 }
 
 %container {
@@ -24,12 +33,16 @@ body {
 .player {
     padding: 20px;
     @extend %container;
+    width: 15rem;
+    height: 5rem;
+    justify-self: flex-end;
 }
 
 .gameboard-container {
-    margin: 50px;
     max-width: 475px;
     overflow: hidden;
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
     @extend %container;
 
     .boards-panel {
@@ -43,6 +56,27 @@ body {
 
     .toggle-panel {
         left: -430px;
+    }
+
+    #destroyer {
+        position: absolute;
+        top: 77px;
+        left: 36px;
+        // transform: rotate(90deg);
+    }
+    
+    #cruiser {
+        position: absolute;
+        left: 70px;
+        top: 177px;
+    }
+    
+    #fire {
+        position: absolute;
+        width: 72px;
+        height: auto;
+        left: 84px;
+        top: 55px;
     }
 }
 
@@ -84,7 +118,11 @@ body {
     padding: 20px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    width: 100%;
+    height: 5rem;
+    gap: 2rem;
+    justify-self: start;
 
     button {
         color: #dfdddd;
@@ -126,23 +164,78 @@ body {
     }
 }
 
-#destroyer {
-    position: absolute;
-    top: 77px;
-    left: 36px;
-    // transform: rotate(90deg);
+.ships-container {
+    // border: 1px solid lightgreen;
+    display: flex;
+    flex-direction: column;
+    gap: 1.8rem;
+    width: fit-content;
+    justify-self: flex-end;
+    align-items: start;
+
+    &::before {
+        content: 'ENEMY SHIPS';
+        letter-spacing: 2px;
+    }
+
+    .ship-container {
+        @extend %container;
+        width: fit-content;
+        padding: 0.5rem 1.2rem;
+        display: flex;
+        align-items: center;
+        position: relative;
+
+        &:nth-of-type(1) {
+            filter: brightness(0.5);
+        }
+
+        &::before {
+            position: absolute;
+            left: -1.5rem;
+        }
+
+        &:nth-of-type(1)::before { content: '5'; }
+        &:nth-of-type(2)::before { content: '4'; }
+        &:nth-of-type(3)::before { content: '3'; }
+        &:nth-of-type(4)::before { content: '3'; }
+        &:nth-of-type(5)::before { content: '2'; }
+
+        img {
+            animation: bob 2s infinite;
+        }
+
+        &:nth-of-type(1) img{
+            animation: none;
+        }
+
+        &:nth-of-type(2) img {
+            animation-delay: 0.3s;
+        }
+
+        &:nth-of-type(3) img {
+            animation-delay: 0.8s;
+        }
+    }
 }
 
-#cruiser {
-    position: absolute;
-    left: 70px;
-    top: 177px;
+@keyframes bob {
+    0% { transform: translateY(0); }
+    50% { transform: translateY(1px); }
+    100% { transform: translateY(-1px); }
 }
 
-#fire {
-    position: absolute;
-    width: 72px;
-    height: auto;
-    left: 84px;
-    top: 55px;
-}
+.nav-container {
+    padding: 1rem;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    @extend %container;
+
+    video,
+    img {
+        height: 10rem;
+        border-radius: 10px;
+    }
+} 
