--- a/src/components/style/placement.scss
+++ b/src/components/style/placement.scss
@@ -19,8 +19,9 @@ main {
     align-items: center;
     column-gap: 3.5rem;
     row-gap: 3rem;
-    margin: 3rem auto 0 auto;
+    margin: 0 auto;
     width: fit-content;
+    position: relative;
 }
 
 %container {
@@ -29,12 +30,18 @@ main {
     background: $inner-color;
 }
 
+#player-name {
+    position: absolute;
+    top: 3rem;
+    left: 48%;
+}
+
 .guide-container {
     padding: 2rem;
     @extend %container;
     height: 5rem;
-    justify-self: flex-end;
     text-align: center;
+    align-self: end;
 }
 
 .gameboard-container {
@@ -42,6 +49,7 @@ main {
     overflow: hidden;
     grid-column: 2 / 3;
     grid-row: 1 / 3;
+    align-self: end;
     @extend %container;
 
     .boards-panel {
@@ -97,6 +105,7 @@ main {
     justify-content: center;
     align-items: center;
     gap: 1rem;
+    transform: translateY(8rem);
     @extend %container;
 
     button {
