implement board toggling in placement

--- a/src/components/style/placement.scss
+++ b/src/components/style/placement.scss
@@ -278,5 +278,10 @@ main {
         &:hover {
             filter: brightness(1.1);
         }
+
+        &.active {
+            pointer-events: auto;
+            filter: brightness(1);
+        }
     }
 }
