--- a/src/components/style/game.scss
+++ b/src/components/style/game.scss
@@ -297,7 +297,7 @@ section.gameboard-ships {
     }
 
     &.sunk {
-        filter: brightness(0.6);
+        filter: brightness(0.5);
     }
 
     //  horizontal ships
@@ -385,7 +385,6 @@ div.fire-gif {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: fit-content;
     animation: modal-grow 0.3s ease-in-out;
 
     &::backdrop {
@@ -398,6 +397,7 @@ div.fire-gif {
         h2 {
             display: block;
             margin-bottom: 2rem;
+            text-align: center;
         }
     
         a {
@@ -408,13 +408,38 @@ div.fire-gif {
             text-decoration: none;
             outline: none;
 
-            &:nth-of-type(2) {
-                margin-left: 2rem;
+            &:nth-of-type(1) {
+                margin-left: 30%;
+                margin-right: 2rem;
             }
 
             &:hover {
                 filter: brightness(1.1);
             }
+        }
+    }
+}
+
+.display-fleet-container {
+    display: flex;
+    justify-content: space-between;
+    pointer-events: none;
+    margin-bottom: 1rem;
+
+    .fleet-modal {
+        transform: scale(0.8);
+        position: relative;
+
+        h3 {
+            position: absolute;
+            z-index: 1;
+            left: 50%;
+            transform: translate(-50%, -2.5rem);
+        }
+
+        // board
+        & > div {
+            margin: 0;
         }
     }
 }
