--- a/src/components/style/game.scss
+++ b/src/components/style/game.scss
@@ -1,5 +1,4 @@
 $inner-color: #001833;
-// $outer-color: #001f42;
 $outer-color: #222d38;
 
 *, *::before, *::after {
@@ -15,8 +14,10 @@ body {
 
 @keyframes ship-motion {
     0% { transform: translate(0,0);}
-    33% { transform: translateY(10px); }
-    67% { transform: translateY(-10px); }
+    10% { transform: translate(5px, 10px); }
+    40% { transform: translate(3px, 20px); }
+    60% { transform: translate(3px, -10px); }
+    80% { transform: translate(1px, -15px); }
     100% { transform: translate(0,0);}
 }
 
@@ -29,7 +30,10 @@ main {
     margin: 5rem auto 0 auto;
     width: fit-content;
     position: relative;
-    // animation: ship-motion 1.5s linear infinite;
+    
+    &.ship-motion {
+        animation: ship-motion 2.5s linear infinite;
+    }
 }
 
 %container {
@@ -456,6 +460,44 @@ div.fire-gif {
 
 #settings-modal {
     width: fit-content;
+
+    #ui-motion-btn {
+        @extend %container;
+        color: #ffffffe0;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0.7rem 0;
+        border: none;
+        outline: none;
+        cursor: pointer;
+
+        & * {
+            pointer-events: none;
+        }
+
+        &:hover {
+            background: #001e42;
+        }
+
+        #settings-led {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            margin-right: 1rem;
+        }
+
+        &[data-active="true"] #settings-led {
+            background: #0f0;
+            box-shadow: 0 0 20px 5px #0f0;
+        }
+
+        &[data-active="false"] #settings-led {
+            background: #f00;
+            box-shadow: 0 0 20px 5px #f00;
+        }
+    }
 
     a {
         display: block;
